phpapp/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: php-app
  namespace: gcpug
  labels:
    app: php-app
spec:
  replicas: 1
  minReadySeconds: 10
  selector:
    matchLabels:
      app: php-app
  volumes:
    - name: src-data
      emptyDir: {}
  containers:
  - name: nginx
    image: gcr.io/[PROJECT_ID]/gcpug-nginx:v1
    ports:
    - containerPort: 80
      protocol: TCP
    volumeMounts:
      - mountPath: /var/www/html
        name: src-data
  - name: php
    image: gcr.io/jcgp-develop/php:v1
    imagePullPolicy: Always
    ports:
    - containerPort: 9000
      protocol: TCP
    volumeMounts:
      - mountPath: /var/www/html
        name: src-data
    lifecycle:
      postStart:
        exec:
          command: ["/bin/sh", "-c", "cp -r /app/. /var/www/html"]
